# fortuna-2

./: .gitignore  .gitmodules  README.md
debugger/: CMakeLists.txt
emulator/: CMakeLists.txt  main.cc  manager.cc  manager.hh
emulator/cmd/: createimage.cc
emulator/compiler/: compilationresult.hh  compiler.cc  compiler.hh  debug.hh  projectfile.cc  projectfile.hh
emulator/contrib/z80/: Z80.h
emulator/emulator/: emulator.cc  emulator.hh  image.cc  image.hh  imagefile.cc  imagefile.hh  terminal.cc
emulator/test/: compiler_test.cc  projectfile_test.cc
emulator/test/sample/: boot.z80  sample.yaml
emulator/ui/: codewindow.cc  codewindow.hh  cpuwindow.cc  cpuwindow.hh  demowindow.hh  glfwwindow.cc  glfwwindow.hh  loadprojectwindow.cc  loadprojectwindow.hh  mainwindow.cc  mainwindow.hh  menuwindow.cc  menuwindow.hh  messagebox.cc  messagebox.hh  ramwindow.cc  ramwindow.hh  sendkeypresswindow.cc  sendkeypresswindow.hh  terminalwindow.cc  terminalwindow.hh  window.hh
emulator/ui/gui/: gui.cc  gui.hh  properties.cc  properties.hh
emulator/ui/modal/: messagebox.hh  sendkeypressmodal.cc  sendkeypressmodal.hh
emulator/ui/model/: codemodel.cc  codemodel.hh
emulator/ui/window/: codewindow.cc  codewindow.hh  cpuwindow.cc  cpuwindow.hh  demowindow.cc  demowindow.hh  fileselectwindow.cc  fileselectwindow.hh  loadprojectwindow.cc  loadprojectwindow.hh  mainwindow.cc  mainwindow.hh  menuwindow.cc  menuwindow.hh  ramwindow.cc  ramwindow.hh  storagewindow.cc  symbolselectwindow.cc  symbolselectwindow.hh  terminalwindow.cc  terminalwindow.hh
firmware/: .gitignore  Makefile  boot.template  io.c  io.h  main.c  ram.c  ram.h  reset  sdcard.c  sdcard.h  serial.h  spi.c  spi.h  step.c  step.h  terminal  terminal_uart  tests.c  tests.h  z80.c  z80.h
firmware-new/: Makefile  README.md  TODO  TODO.md  avrdude_gpio.conf  io.c  io.h  main.c  post.c  post.h  ram.c  ram.h  random.c  random.h  sdcard.c  sdcard.h  spi.c  spi.h  uart.c  uart.h  z80.c  z80.h
firmware/fatfs/: diskio.c  ffconf.h
firmware/z80/: boot.z80
fortuna-2/emulator/: CMakeLists.txt  main.cc  manager.cc  manager.hh
fortuna-2/emulator/compiler/: compiler.cc  compiler.hh  debug.cc  debug.hh  projectfile.hh
fortuna-2/emulator/contrib/glad/include/glad/: gl.h
fortuna-2/emulator/emulator/: emulator.cc  emulator.hh  imagefile.cc  imagefile.hh  terminal.cc  terminal.hh
fortuna-2/emulator/test/: catch.hpp  compiler_test.cc  terminal_test.cc
fortuna-2/emulator/ui/: window.hh
fortuna-2/emulator/ui/gui/: gui.cc  gui.hh  properties.cc
fortuna-2/emulator/ui/model/: codemodel.cc  codemodel.hh
fortuna-2/emulator/ui/window/: demowindow.cc  loadprojectwindow.cc  menuwindow.cc  menuwindow.hh  ramwindow.hh  storagewindow.cc  storagewindow.hh  symbolselectwindow.cc  terminalwindow.cc
fortuna-2/firmware/: Makefile  avrdude_gpio.conf  main.c  serial.c  z80.c
fortuna-2/firmware/z80/: boot.z80  fortuna2.inc
fortuna-2/software/: debug.yml  fortuna2.inc
fortuna-2/software/os/: os.z80  print.z80  shell.z80
fortuna-2/software/os/fs/: dir.z80  fat.z80  fat16.z80  file.z80  fs.z80  lowlevel.z80  struct.z80
fortuna-2/software/os/shell/: cmdline.z80  execute.z80  prompt.z80
fortuna-2/software/os/syscall/: math.z80  process.z80  syscall.z80  terminal.z80
fortuna-2/software/os/util/: math.z80  string.z80
fortuna-2/software/rom/: boot.z80
fortuna-2/z80/os/: mini.z80  os.z80
fortuna-3/: ideas.txt
software/: fortuna2.inc
software/hello/: hello.z80
software/os/: fortuna2.inc  os.z80
software/os/fs/: dir.z80  file.z80  struct.z80
software/os/shell/: execute.z80
software/os/util/: math.z80
tmp/: boot.txt  create_image.sh
z80/: debug.yml  mini.z80
z80/os/: os.z80  print.z80  shell.z80
z80/rom/: boot.z80  listing.txt  os.z80  rom.yaml
